// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha;

import "wfa/measurement/api/v2alpha/data_provider.proto";
import "wfa/measurement/api/v2alpha/exchange_workflow.proto";
import "wfa/measurement/api/v2alpha/model_provider.proto";

option java_package = "org.wfanet.measurement.api.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "RecurringExchangeProto";

// A Panel Matching exchange that happens between a DataProvider and a
// ModelProvider on some schedule. This is instantiated once per date in the
// schedule via Exchange resources.
message RecurringExchange {
  message Key {
    string recurring_exchange_id = 1;
  }
  // Resource key.
  Key key = 1;

  // The ExchangeWorkflow for this recurring exchange. Immutable.
  ExchangeWorkflow exchange_workflow = 2;

  // How often to run the `exchange_workflow`.
  Schedule repetition_schedule = 3;

  // The DataProvider party.
  DataProvider.Key event_data_provider = 4;

  // The ModelProvider party.
  ModelProvider.Key model_provider = 5;

  // Whether this exchange is still enabled.
  State state = 6;

  message Schedule {
    // Expects a valid CRON expression.
    // See https://en.wikipedia.org/wiki/Cron#CRON_expression.
    string cron_expression = 1;
  }

  enum State {
    STATE_UNSPECIFIED = 0;

    // New Exchanges should be started according to the schedule.
    ACTIVE = 1;

    // New Exchanges will not be created.
    RETIRED = 2;
  }
}